# rust-basic

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
backend/: Cargo.toml
backend/src/: main.rs
httptest/: hello.http
httptest/auth/: register.http
migrations/: create_users_table.sql
src/: config.rs  lib.rs  main.rs
src/domain/entity/: user.rs
src/domain/repository/: user.rs
src/middleware/: error_logger.rs  mod.rs
src/schema/: user.rs
src/state/: config.rs
src/usecase/auth/register/: dto.rs  handler.rs  mapper.rs  mod.rs  service.rs
