[package]
name = "rust-101"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.3", features = ["postgres", "chrono", "r2d2"] }
pq-sys = { version = "0.7", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
validator = { version = "0.18", features = ["derive"] }
dotenvy = "0.15"
envy = "0.4"
once_cell = "1.19"

openssl = { version = "0.10", features = ["vendored"] }