[package]
name = "rust-basic"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.3", features = ["postgres", "chrono", "r2d2", "uuid"] }
pq-sys = { version = "0.7", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
rocket = { version = "0.5", features = ["json"] }  # แทน axum
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
validator = { version = "0.18", features = ["derive"] }
dotenvy = "0.15"
envy = "0.4"
once_cell = "1.19"

openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
